--- a/component/layout.module.css
+++ b/component/layout.module.css
@@ -3,7 +3,10 @@
    color: white;
    display: flex;
    align-items: stretch;
+   justify-content: flex-end;
    height: 3rem;
+   width: 100%;
+   padding-right: 1%;
 }
 
 .navButton {
@@ -18,6 +21,10 @@
 .navButtonClicked {
    background-color: #fae4e5;
    color: #1b1c31;
+}
+
+.container {
+   width: 100%;
 }
 
 @media screen and (max-width: 480px) {
